// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Unification (V2) > Foreign variables > fails for different foreign symbols 1`] = `
{
  "message": "Type Mismatch: Cannot unify:
	FFI.Indexed
with
	FFI.Other

Trace:

While unifying:
	
	FFI.Indexed
with:
	FFI.Other
",
}
`;

exports[`Unification (V2) > Mu Types > fails when unfolding Mu without application hits mismatch (non-function body) 1`] = `
{
  "message": "Unification Failure: Cannot unify 1 with 0

Trace:

While unifying:
	
	1
with:
	0

--------------------------------------------------------------------------------------------


While unifying:
	
	one
with:
	0
",
}
`;

exports[`Unification (V2) > Mu Types > unfolds Mu in application context during unification (negative) 1`] = `
{
  "message": "Unification Failure: Cannot unify 0 with 1

Trace:

While unifying:
	
	0
with:
	1

--------------------------------------------------------------------------------------------


While unifying:
	
	(test) 5
with:
	1
",
}
`;

exports[`Unification (V2) > Row Unification > Sigma types unification > fails on Sigma row annotation mismatch 1`] = `
{
  "message": "Missing Label: x

Trace:

While unifying:
	
	[ x: Type ]
with:
	[ y: Type ]

--------------------------------------------------------------------------------------------


While unifying:
	
	[ x: Type ]
with:
	[ y: Type ]

--------------------------------------------------------------------------------------------


While unifying:
	
	Σ(r: [ x: Type ]) . (closure: Schema [] -| ·)
with:
	Σ(r: [ y: Type ]) . (closure: Schema [] -| ·)
",
}
`;

exports[`Unification (V2) > Row Unification > fails on missing label 1`] = `
{
  "message": "Missing Label: x

Trace:

While unifying:
	
	[ x: 1 ]
with:
	[]

--------------------------------------------------------------------------------------------


While unifying:
	
	[ x: 1 ]
with:
	[]
",
}
`;

exports[`Unification (V2) > fails on different literals 1`] = `
{
  "message": "Unification Failure: Cannot unify 1 with 2

Trace:

While unifying:
	
	1
with:
	2
",
}
`;

exports[`Unification (V2) > fails on lambda icit mismatch 1`] = `
{
  "message": "Type Mismatch: Cannot unify:
	λx -> (closure: x -| Γ: x)
with
	λx => (closure: x -| Γ: x)

Trace:

While unifying:
	
	λx -> (closure: x -| Γ: x)
with:
	λx => (closure: x -| Γ: x)
",
}
`;

exports[`Unification (V2) > rigid variable mismatch 1`] = `
{
  "message": "Variable Mismatch: Cannot unify L0 with L1

Trace:

While unifying:
	
	L0
with:
	L1
",
}
`;
